# promptuna

./: .copier-answers.yml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PLAN.md  PLAN2.md  README.md  SKILL.md  TODO.md  getting_started.ipynb  getting_started.py  getting_started_program.py  justfile  prek.toml  pyproject.toml
.github/workflows/: release.yml  verify.yml
.ipynb_checkpoints/: getting_started-checkpoint.ipynb
cli/: README.md  pyproject.toml
cli/src/promptuna_cli/: SKILL.md  __init__.py  _common.py  main.py
cookbook/: getting_started.ipynb  start.py
cookbook/__marimo__/: start.ipynb
cookbook/__marimo__/session/: start.py.json
frontend/: .env.example  .prettierignore  DESIGN.md  HANDOFF.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  eventStore.ts  jobCompare.ts  jobSession.ts  recentModels.ts  sseClient.ts  types.ts
frontend/src/lib/components/: AggregateBar.svelte  JobLauncher.svelte  JobManifest.svelte  JobSummary.svelte  JobView.svelte  Select.svelte  StepSection.svelte  TrialRow.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/jobs/: +page.svelte
frontend/src/routes/jobs/[id]/: +page.svelte
frontend/src/routes/jobs/compare/[ids]/: +page.svelte
samples/: README.md
samples/classify_sentiment/: metrics.py  programs.py
samples/classify_sentiment/data/: dev.jsonl  full.jsonl  partial.jsonl
samples/classify_sentiment/prompts/: baseline.jinja  spanish.jinja
scripts/: sync_workspace_pins.py
server/: README.md  pyproject.toml
server/projects/classify_sentiment/prompts/: baseline.jinja
server/src/promptuna_server/: __init__.py  jobs.py  main.py  projects.py  schemas.py
src/lmeh/: datatypes.py  evaluate.py  execution.py  judges.py  optimization.py  optimize.py  program.py  rendering.py  report.py  reporting.py  run.py
src/lmeh/prompt_templates/: judge.jinja  optimizer.jinja
src/promptuna/: __init__.py  evaluate.py  jobs.py  load.py  optimize.py  program.py  projects.py  report.py  run.py  serialize.py
src/promptuna/cli/: __init__.py  _common.py  main.py
src/promptuna/prompt_templates/: optimizer.jinja
tests/: conftest.py  helpers.py
tests/fixtures/test_project/: metrics.py  programs.py
tests/fixtures/test_project/data/: dev.jsonl
tests/fixtures/test_project/prompts/: baseline.jinja
tests/promptuna/: test_cli.py  test_evaluate.py  test_jobs.py  test_load.py  test_optimize.py  test_program.py  test_projects.py  test_report.py  test_run.py  test_serialize.py
tests/promptuna_cli/: test_cli.py
tests/promptuna_server/: test_api.py
