# Project metadata ------------------------------------------------------------
[project]
name = "promptuna"
version = "1.33.0"
description = "Language Model Evaluation Harness"
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ignacio Llorca", email = "nllorca@proton.me" }]
dependencies = [
    "lmdk>=1.8.0",
]

# Dev / optional dependencies -------------------------------------------------
[dependency-groups]
dev = [
    "catppuccin-jupyterlab>=0.2.5",
    "complexipy",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "logfire>=4.36.0",
    "promptuna-cli",
    "promptuna-server",
    "pytest>=9.0.3",
    "pytest-cov",
    "ruff",
    "ty",
    "typer>=0.12",
]

[tool.uv.sources]
promptuna-cli = { workspace = true }
promptuna-server = { workspace = true }

# uv workspace ---------------------------------------------------------------
[tool.uv.workspace]
members = [".", "cli", "server"]

# Build backend ---------------------------------------------------------------
[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

# Ruff (lint + format) --------------------------------------------------------
[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"samples/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "cli/src", "server/src", "tests"]

[tool.ty.environment]
root = ["./src", "./cli/src", "./server/src", "./tests"]

[tool.coverage.run]
source = ["promptuna", "promptuna_cli", "promptuna_server"]

[tool.coverage.report]
fail_under = 90

# Semantic release (automated versioning from conventional commits) -----------
[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "cli/pyproject.toml:project.version",
    "server/pyproject.toml:project.version",
]
build_command = "python scripts/sync_workspace_pins.py"
commit_message = "chore: release {version}"
commit_parser = "conventional"
tag_format = "v{version}"
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

# Spelling --------------------------------------------------------------------
# [tool.codespell]
# skip = ["", ""]  # Comma separated list of regex strings to ignore files for the spelling check
# ignore-words-list = "firstword,secondword"  # Specific strings to accept
