[project]
name = "promptuna-cli"
version = "0.1.0"
description = "Typer CLI for on-disk promptuna run / evaluate / optimize jobs"
requires-python = ">=3.13"
dependencies = [
    "promptuna",
    "typer>=0.12",
]

[project.scripts]
promptuna = "promptuna_cli.main:run_cli"

[tool.uv.sources]
promptuna = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
