[project]
name = "promptuna-cli"
version = "1.29.0"
description = "Typer CLI for on-disk promptuna run / evaluate / optimize jobs"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ignacio Llorca", email = "nllorca@proton.me" }]
dependencies = [
    "promptuna==1.29.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://pypi.org/project/promptuna/"
Documentation = "https://github.com/nachollorca/promptuna#readme"
Repository = "https://github.com/nachollorca/promptuna"
"Issue Tracker" = "https://github.com/nachollorca/promptuna/issues"

[project.scripts]
promptuna = "promptuna_cli.main:run_cli"

[tool.uv.sources]
promptuna = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
