[project]
name = "promptuna-server"
version = "1.23.0"
description = "FastAPI server for streaming promptuna run / evaluate / optimize jobs"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "promptuna==1.23.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
promptuna = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
